# NiicheExercise

./: .githubignore  .gitignore  README.md  exercise_tracker.db  pyproject.toml
src/: database.py  exercise_tracker.db  exercises.yaml  main.py  models.py  routes.py  schemas.py
src/models/: __init__.py  exercise.py  user.py
src/routers/: __init__.py  exercise.py  user.py
